# luoibacstudio-app

./: .env.production.example  README.md
.github/workflows/: perform-upgrade.yml  setup-production.yml  test-upgrade.yml
deploy/: docker-compose.yml
deploy/app_container/: Dockerfile  README.md  docker-compose.yml  modify_settings.py  pyproject.toml  start.sh
deploy/nginx/: default.conf
deploy/wagtail/: Dockerfile  requirements.txt
